src/shared/infrastructure/terraform_resources/modules/security_group/main.tf
/*resource "aws_default_vpc" "default" {

}*/

resource "aws_security_group" "accountings_server_sg" {
  name = "${var.maintainer}-sg"
  description = "Allow http, https and ssh inbound traffic"
  //vpc_id = "vpc-c49ff1be"
  //vpc_id = aws_default_vpc.default.id

  ingress {
    description = "All http request"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    description = "ssh request"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    description = "accountings default http request"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    description = "dynamodb http request"
    from_port   = 8000
    to_port     = 8000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    name = "${var.maintainer}-sg"
  }
}
